--- a/stripchat.yaml
+++ b/stripchat.yaml
@@ -1,4 +1,4 @@
-author: '@luffy'
+author: '@cwaizydee'
 min_ver: '2.3.0'
 proxy_hosts:
   - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
